refactor: reorganize assets img

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
 
             <div class="links__access">
-              <a href="#">Login</a>
+              <a href="#" class="link">Login</a>
               <div class="access__separator"></div>
               <a href="" class="btn active">Register</a>
             </div>
@@ -1342,21 +1342,21 @@
         <div class="container">
           <div class="reasons__numbers">
             <div class="numbers__group">
-              <img src="assets/img/icon-stats.svg" alt="Icon stats" />
+              <img src="assets/img/icons/icon-stats.svg" alt="Icon stats" />
               <div class="numbers__data">
                 <h3 class="data__value">$30B</h3>
                 <span class="data__label">Digital Currency Exchanged</span>
               </div>
             </div>
             <div class="numbers__group">
-              <img src="assets/img/icon-profile.svg" alt="Icon stats" />
+              <img src="assets/img/icons/icon-profile.svg" alt="Icon stats" />
               <div class="numbers__data">
                 <h3 class="data__value">10M+</h3>
                 <span class="data__label">Trusted Wallets Investor</span>
               </div>
             </div>
             <div class="numbers__group">
-              <img src="assets/img/icon-world.svg" alt="Icon stats" />
+              <img src="assets/img/icons/icon-world.svg" alt="Icon stats" />
               <div class="numbers__data">
                 <h3 class="data__value">195</h3>
                 <span class="data__label">Countries Supported</span>
@@ -1367,7 +1367,7 @@
           <div class="reasons__why">
             <div class="why__illustration">
               <div class="illustration__line"></div>
-              <img src="assets/img/illu-reasons.svg" alt="Illu reasons" />
+              <img src="assets/img/illus/illu-reasons.svg" alt="Illu reasons" />
             </div>
             <div class="why__text">
               <h2>Why you should choose CRAPPO</h2>
@@ -1399,7 +1399,7 @@
             <div class="cryptocurrencies__card active">
               <img
                 class="card__cryptocurrency"
-                src="assets/img/icon-bitcoin.svg"
+                src="assets/img/icons/icon-bitcoin.svg"
                 alt="Bitcoin"
               />
               <h3>Bitcoin <span>BTC</span></h3>
@@ -1415,7 +1415,7 @@
             <div class="cryptocurrencies__card">
               <img
                 class="card__cryptocurrency"
-                src="assets/img/icon-ethereum.svg"
+                src="assets/img/icons/icon-ethereum.svg"
                 alt="Ethereum"
               />
               <h3>Ethereum <span>ETH</span></h3>
@@ -1431,7 +1431,7 @@
             <div class="cryptocurrencies__card">
               <img
                 class="card__cryptocurrency"
-                src="assets/img/icon-litecoin.svg"
+                src="assets/img/icons/icon-litecoin.svg"
                 alt="Litecoin"
               />
               <h3>Litecoin <span>LTC</span></h3>
@@ -1466,7 +1466,7 @@
             </div>
             <img
               class="feat__illu-invest"
-              src="assets/img/illu-invest.svg"
+              src="assets/img/illus/illu-invest.svg"
               alt="Illu invest"
             />
           </div>
@@ -1474,7 +1474,7 @@
           <div class="features__feat">
             <img
               class="feat__illu-statistics"
-              src="assets/img/illu-statistics.svg"
+              src="assets/img/illus/illu-statistics.svg"
               alt="Illu statistics"
             />
             <div class="feat__text">
@@ -1498,7 +1498,7 @@
             </div>
             <img
               class="feat__illu-table"
-              src="assets/img/illu-table.svg"
+              src="assets/img/illus/illu-table.svg"
               alt="Illu table"
             />
           </div>
