feat: add trade securely calculator

--- a/index.html
+++ b/index.html
@@ -1391,7 +1391,29 @@
 
       <div class="trade-securely">
         <div class="container">
-          <div class="trade-securely__calculator"></div>
+          <div class="trade-securely__calculator">
+            <div class="calculator__form">
+              <div>
+                <input type="text" placeholder="Enter your hash rate" />
+                <select>
+                  <option value="">BTC/s</option>
+                  <option value="">ETH/s</option>
+                  <option value="">LTC/s</option>
+                </select>
+              </div>
+              <button class="btn active">Calculate</button>
+            </div>
+            <div class="calculator__info">
+              <h4>ESTIMATED 24 HOUR REVENUE:</h4>
+              <p class="info__conversion">
+                0.055 130 59 ETH <span>($1275)</span>
+              </p>
+              <p>
+                Revenue will change based on mining difficulty and Ethereum
+                price.
+              </p>
+            </div>
+          </div>
 
           <h2>Trade securely and market the high growth cryptocurrencies.</h2>
 
